# sonar-cloud-demo

./: .gitignore  CMakeLists.txt  LICENSE  SonarCloudDemo.cpp  sonar-project.properties
.github/workflows/: sonarcube.yml
